<resources>
    <!--Activity title-->
    <string name="app_name">Airport Beta</string>
    <string name="analytics">Аналитика</string>
    <string name="tools">Настройки</string>
    <string name="search_title">Поиск</string>

    <string name="menu_item_notification">Push</string>

<!--Подробно о персонале-->
    <string name="crew_date">Назначена</string>
    <string name="position_detail_staff">Должность</string>
    <string name="email_detail_staff">Email</string>
    <string name="telephone_detail_staff">Телефон</string>
    <string name="jobs_detail_staff">Работает с</string>
    <string name="date_birthday_detail_staff">Дата рождения</string>

    <string name="view_navigation_open">Open</string>
    <string name="view_navigation_close">Close</string>

    <string name="welcome_txt">Airport Beta</string>
    <string name="email">Email Адрес</string>
    <string name="login">Войти</string>
    <string name="defaultmsg"></string>
    <string name="msg_title">Сообщение</string>
    <string name="user_title"></string>

<!--Логин активити-->
    <string name="hint_password">Пароль</string>
    <string name="hint_email">Email</string>
    <string name="err_msg_name">Введите пароль</string>
    <string name="err_msg_email">Введите email</string>
    <string name="title_activity_chat_room_discussion">ChatRoomDiscussionActivity</string>
    <string name="action_logout">Выйти</string>

    <!--Сообщения об ошибках-->
    <string name="no_data">Нет данных</string>
    <string name="no_network">Нет доступа к сети интернет</string>
    <string name="error_login_password">Не верный логин или пароль</string>


    <!--Настройки-->
    <string name="profile">Профиль</string>
    <string name="notification">Уведомления</string>
    <string name="lang">Языки</string>
    <string name="about">О программе</string>
    <!--<string name="tab_item_staff">Staff</string>-->
    <!--<string name="tab_item_crew">Flight crew</string>-->
    <!--<string name="tab_item_flight">Flights</string>-->
    <!--<string name="tab_item_notification">Notification</string>-->
    <string name="alertTitle">Заявка Диспетчеру</string>
    <string name="alertMessege">Опишите свою проблему</string>
    <string name="alertOk">Отправить</string>
    <string name="alertCancel">Отмена</string>

</resources>
