<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/view">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            android:background="?attr/colorPrimary" />

    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >
    <android.support.v7.widget.CardView
        android:id="@+id/myProf"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:cardCornerRadius="3dp"


        >
        <TextView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/profile"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="24dp"
            android:paddingBottom="24dp"/>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:id="@+id/notify"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:cardCornerRadius="3dp"
        android:layout_below="@+id/myProf"


        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/notification"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="24dp"
            android:paddingBottom="24dp"/>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:id="@+id/lang"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:cardCornerRadius="3dp"
        android:layout_below="@+id/notify"
        >
<TextView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:text="@string/lang"
    android:textAppearance="@style/TextAppearance.AppCompat.Title"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="24dp"
    android:paddingBottom="24dp"/>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:id="@+id/aboutProg"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:cardCornerRadius="3dp"
        android:layout_below="@+id/lang"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/about"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="24dp"
            android:paddingBottom="24dp"/>
    </android.support.v7.widget.CardView>
    </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>